changed appveyor file

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,6 +13,9 @@ install:
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
+build_script:
+  - npm run build   # команда сборки
+
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
